# household-helper

./: .gitignore  README.md  chat.py  hello.py  index.py  main.py  models.py  pyproject.toml  system_prompt.py  user.py  vector_store.py
.github/workflows/: build.yml  test.yml
app/: main.py  models.py  pyproject.toml  system_prompt.py  user.py  vector_store.py
app/tutor/: prompt.py
coder/: prompt.py
docker/: Dockerfile  app.Dockerfile  docker-compose.yml  draid.Dockerfile  kb.Dockerfile  ui.Dockerfile  ui.nginx.conf  ui.nginx.conf.template
draid/: Cargo.toml  README.md
draid/.sqlx/: query-033ec1d088ef6fd7d65fc05486d2dd0edc4c57e803ec833fdcecdb0f18c132b6.json  query-0bc3376df486dbf2125f21f02c3939e4c1767d323c1e0293892a217cd2ce905d.json  query-0c3b4313da2f7b02ff427ef96ae64cb280451636c26b856c75f21056f13c8659.json  query-1edc8fb4df3090e99c4b6a61fd1092aeef366afb44f9207a9992d23d2010ccde.json  query-2108a70ef8446679f8d526c1313d8664f663ddf85d02ee430ae862be7be2d9bf.json  query-4c1ff3e9f9765af3a468e2870bc8af4ec40b5ad9b97fc4d55f6e2cacdfe27f7b.json  query-4e8c8853c3febb5eac97b1770ca370a414f534041c706b52b61adb371887b9e9.json  query-51e82b873567377b9cc05e082323acee0b038e27094d3f35b33540626d50e833.json  query-57caaba7ea4f7e2781efd9e4207bbc6d27a42b1f3de015fef03375fc2dc57ad4.json  query-5d94195cc00523c9f48bcb0de9c36df2a493264f855e8715a3999727beb7cda5.json  query-7ac1566068126fa82d6493847c0842184ddf6a964da7d58ce18193ad9ee303ea.json  query-7cfde3442c46b715f8a3c21f763f1cf1c8eb5a4263f917726afa8a0c04835504.json  query-7dfefddb2cbca92eeef6350e65bf48ef00f4c4b3776c3b456596e48c71d239a8.json  query-8d49f4377caf41f2857f2f5bf01025a707e96d626034834e22d73b2fcf61ab1a.json  query-9f7f7b1aebc6d3d3c59e1f3273bfd823c1a772599f351dbd50cf81ee05f035cc.json  query-a5cc773c97dd77ca3ed931e38e046d68c0c0f565964a50da106f8f474dae41ef.json  query-b459e2ec00d118c03ea07b58b0ab5a85fd036bcc2c9ec82f90b6a08a89339b6a.json  query-c6eb44a2ef9e7e93f511e5b8a9217dba74e3e602c8a9a832c7147da4f11f8f23.json  query-ca1c1d924e9cd65495cc0c2892aa2cf7c88054a5f867196ba5dd24b28b7cffcf.json  query-cbfc8468b38187bc7a4848cbdb20628cade0d3e5c2cc16cf4d11f70baefc3530.json  query-df783fe35325a873741fd7a6de4a29f5b5ca7f5eb3a44bedb60a80427b7e5053.json  query-eee79ab314b53ae230266912fca239a4581a2491c2045e56454b267df15e064f.json  query-fcbb098fb6530e11c7a0a3cb1644a3ff0b142000f4aadc7ef46931f87d198bbf.json
draid/draid-binary/: Cargo.toml  Rocket.toml
draid/draid-binary/.sqlx/: query-3850a9e9adffb6140151792ab3a901f2931a19ba2928af1ad5ad57ff6e53ebdb.json  query-38625495e1ae856da05ca8539d0c2d1cce309ee35eabf3d7cc0a48e26a1e5ead.json  query-439fb7ceab327a10b67e31bf1129d39ee9bb899f021881ab2deae5f6d6ae7d6e.json  query-479d2d035b50be618c73d21a18fa9a95d9818737a53041769ff919eeaa9ebec1.json  query-5e92b533ce4e3af0375747236fcbe3eef05a72d36dc02d4d9df1a99aeacf24ff.json  query-639ae2b9e9db49b34da9d59e12f8da8c58597ba74f4f60e02f3372b29626b4cf.json  query-671ba2a1cf672b4e6c7acea907904fcb7e36811ae236853bdded5415ee647c7d.json  query-7c5b0407106f656ae868edfb921d90fb33b5f59511fcb5c589fc628bd38c6cc3.json  query-7f77af6f52dcfa8a10c955b874fec88f56ecd647c03a25b0299eb4c188008de1.json  query-833116b876bb0b1a620a7c1889998c53849998e75ce34b60cd9fd57270636c68.json  query-d31e69164be388145bf25bf1bb75eeddb33520fc3d75c46a8087cd7a9d4744f4.json  query-d9cc60ba93076d82e6ad2669493e8a6740cdd1f7af68f69837a394e21be344ec.json  query-da0a077ca2cf530185a87ceb967866605ad99a52378af6c4e8f7d2fb50870c79.json
draid/draid-binary/migrations/: 20250912201726_users.sql  20250912201733_sessions.sql  20250928002858_documents.sql  20250928191915_knowledge_bases.sql  20251003002657_traces.sql
draid/draid-binary/src/: auth.rs  dbtracing.rs  embedding.rs  llm.rs  main.rs  mcp_tools.rs  psql_memory.rs  psql_users.rs  psql_vectors.rs  tools.rs
draid/kb-tool-macro/: Cargo.toml
draid/kb-tool-macro/src/: lib.rs
draid/migrations/: 20250912201739_messages.sql  20250912202153_roles.sql  20251011111324_content.sql  20260331223623_modify_messages.sql
draid/src/: api.rs  auth.rs  config.rs  dbtracing.rs  embedding.rs  kb_tools.rs  llm.rs  main.rs  mcp_tools.rs  models.rs  prompts.rs  psql_memory.rs  psql_users.rs  tools.rs
examples/: docker.service  init.sql  install.sh  nginx.app.conf  nginx.conf  nginx.service  recipe.txt
helper/: prompt.py
household-droid/: index.html  package-lock.json  package.json  vite.config.ts
household-droid/src/: App.tsx  main.tsx
household-droid/src/__tests__/: App.test.tsx
household-droid/src/components/: Agent.tsx  AgentSelection.tsx  AppBar.tsx  Chat.tsx  Output.tsx  SessionSelection.tsx  Table.tsx  TableX.tsx
household-droid/src/components/__tests__/: AgentSelection.test.tsx  AppBar.test.tsx  Chat.test.tsx  Output.test.tsx  (+1 more)
household-droid/src/pages/: Auth.tsx  Login.tsx  MainChat.tsx  MainPage.tsx  Settings.tsx
household-droid/src/services/: Api.ts  Api.tsx  actions.ts  actions.tsx  api.tsx  auth.ts  loaders.ts  loaders.tsx  loadersAndActions.ts  routes.ts  routes.tsx
household-droid/src/state/: AgentProvider.tsx  localState.tsx  selectAgent.ts  selectAgent.tsx
knowledge-base/: Cargo.toml  README.md  Rocket.toml
knowledge-base/.sqlx/: query-42acd53f3c0aa77767150a99fbd6e6bc885cec523a46b934244c7d2173b18577.json  query-4e229baabee96152e343e1698280a08d735837e7ac9c7e51b224f24fb7c1c337.json  query-4f3e7dd73f3c03350cbaefb47f2bbb83341ca4b4563c448112114f35488646b6.json
knowledge-base/migrations/: 20250920002911_vectors.sql  20250928002858_documents.sql  20250928002911_vectors.sql  20250928191915_knowledge_bases.sql  20250928202911_vectors.sql
knowledge-base/src/: llm.rs  main.rs  psql_vectors.rs
tests/: conftest.py  test_api.py
tutor/: prompt.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/__tests__/: App.test.tsx
ui/src/components/: AppBar.tsx  Chat.tsx  KnowledgeBase.tsx  Metrics.tsx  Output.tsx  SessionSelection.tsx  TableX.tsx  Users.tsx
ui/src/pages/: MainChat.tsx  MainPage.tsx  Settings.tsx
ui/src/services/: actions.tsx  api.tsx  loaders.tsx  models.tsx  utils.tsx
ui/src/state/: selectAgent.tsx
(+21 files in other folders)
