[package]
name = "draid"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.3"
futures = "0.3.31"
rocket = {version="0.5.1", features=["json", "uuid"]}
sqlx = { version = "0.7.4", default-features = false, features = ["macros", "migrate", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
argon2 = "0.5.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json"] }
[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]
