[package]
name = "draid"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.3"
futures = "0.3.31"
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "macros", "migrate", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
argon2 = "0.5.3"
anyhow = "1.0.100"
async-trait = "0.1.89"
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = {version="0.3.20", features = ["env-filter"]}
pgvector = { version = "0.4", features = ["sqlx"] }
text-splitter = "0.28.0"
sha256 = "1.6.0"
poem-openapi = { version = "5.1.16", features = ["swagger-ui", "chrono", "uuid", "websocket", "sqlx", "url"] }
poem = { version = "3.1.12", features = ["server", "websocket", "multipart"] }
serde = "1.0.228"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.145"
poem-grants = "3.0.2"
rmcp = { version = "0.8.5", features = ["client", "transport-child-process" ,"transport-sse-client-reqwest", "transport-streamable-http-client-reqwest"] }

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]
