[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
rocket = {version="0.5.1", features=["json", "uuid"]}
sqlx = { version = "0.7.4", default-features = false, features = ["macros", "migrate", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
ollama-rs = "0.3.2"
pgvector = { version = "0.3", features = ["sqlx"] }
text-splitter = "0.28.0"
anyhow = "1.0.100"
[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_postgres"]
