[package]
name = "kb-tool-macro"
version = "0.1.0"
edition = "2024"

[lib]
# This line is mandatory for a procedural macro crate
proc-macro = true

[dependencies]
# Used for parsing the macro input (the tokens)
syn = { version = "2.0", features = ["full"] }
# Used for generating the new code (TokenStream)
quote = "1.0"
# Used to bridge syn/quote with the core proc_macro types
proc-macro2 = "1.0"
